# SimpleITK-MICCAI-2011-Tutorial

./: .gitignore
Examples/: Demos.py
Examples/AdvancedTutorial/: CMakeLists.txt
Examples/AdvancedTutorial/SimpleGaussian/: CMakeLists.txt  SimpleGaussian.cxx
Examples/AdvancedTutorial/ToITK/: CMakeLists.txt  ToITK.cxx  ToITKSolution.cxx
Examples/AdvancedTutorial/ToOpenCV/: CMakeLists.txt
Examples/AdvancedTutorial/ToOpenCVAndBack/: CMakeLists.txt
Examples/BasicTutorial1/: Image.py  InputOutput.py
Examples/BasicTutorial2/: Filters.py  Morphology.py
Examples/InteractiveTutorial/: 00-Operators.py  01-CannyEdge.py  05-01-BorderChange.py  05-02-Numpy.py  05-04-RidgeDetection.py  MeasureRegions.py
Presentation/: 05-IntermediateTutorials.tex
